# norine

./: .gitignore  .gitmodules  Frankston_encoding.py  README.md  checkLexMin.py  combined12.icnf  march_n6fp.cubes  march_simpk_n6fp10M.cnf  min_changes.py  norine.py  norine_debug.py  norine_general_pysat.py  norine_path.py  norine_switches.py  norine_switches_pysat.py  shuffled_10M.cubes  shuffled_cubes_n6fp.icnf  test.py
LeanVerification/: Main.lean  NorinVerification.lean  README.md  lake-manifest.json  lakefile.toml
LeanVerification/NorinVerification/: Cnf.lean  DependencyExtractor.lean  NorinCNF.lean  NorinSimplified.lean  SimplifiedSymmetryBreaking.lean  SymmetryBreaking.lean  fHat.lean
dynamic/: CMakeLists.txt  README.md  build-and-install.sh
dynamic/src/: CMakeLists.txt  main.cpp
enc/: conjecture_encodings.py  counter.py  cube_sampler.py  encoding_context.py  experiments.py  f_encoding.py  graph6.py  lex.py  norine_general_pysat.py  num_swaps.py
